Update index.html new trial

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
+      width: 1000px;
       height: 100%;
       border: none;
+      transform: scale(1);
+      transform-origin: top left;
     }
   </style>
 </head>
@@ -47,6 +49,11 @@
 
     if (link) {
       iframe.src = link;
+
+      // Automatically scale the page to fit the width of 1000px
+      const scaleFactor = 1000 / window.innerWidth;
+      iframe.style.transform = `scale(${1 / scaleFactor})`;
+      iframe.style.transformOrigin = "top left";
     } else {
       document.body.innerHTML = '<p style="text-align: center; font-size: 18px; color: #333; margin-top: 20px;">No link provided. Please pass a link in the query parameter as ?link=your-url</p>';
     }
