--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Link Embed</title>
     <style>
-        html, body {
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        html, body {
             width: 100%;
             height: 100%;
             overflow: hidden;
@@ -15,15 +19,6 @@
 
         #container {
             width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            background: #F9F9F9;
-        }
-
-        #frame-container {
-            width: min(100%, 600px);
             height: 100%;
             position: relative;
             overflow: hidden;
@@ -36,12 +31,12 @@
         }
 
         .error {
-            padding: 20px;
-            margin: 20px;
+            padding: 16px;
+            margin: 16px;
             background: white;
             border-radius: 8px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-family: system-ui, sans-serif;
             color: #444;
             text-align: center;
         }
@@ -49,13 +44,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="frame-container">
-            <iframe id="embeddedLink"></iframe>
-        </div>
+        <iframe id="embeddedLink"></iframe>
     </div>
 
     <script>
-        function init() {
+        function initializeEmbed() {
             const urlParams = new URLSearchParams(window.location.search);
             const link = urlParams.get('link');
             const container = document.getElementById('container');
@@ -73,7 +66,7 @@
             }
         }
 
-        init();
+        initializeEmbed();
     </script>
 </body>
 </html>
