Update index.html ver final 5

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             width: 100%;
             margin: 0;
             padding: 0;
+            position: relative;
         }
 
         #directImage {
@@ -29,6 +30,14 @@
             width: 100vw;
             height: auto;
             display: block;
+        }
+
+        /* Special handling for large detailed images */
+        #directImage.large-image {
+            position: relative;
+            width: 100%;
+            height: auto;
+            transform-origin: top left;
         }
 
         #webContainer {
@@ -98,6 +107,19 @@
             hideAllElements();
             imageWrapper.style.display = 'block';
             directImage.src = url;
+            
+            directImage.onload = function() {
+                if (this.naturalWidth > 1.5 * window.innerWidth) {
+                    this.classList.add('large-image');
+                    const scale = window.innerWidth / this.naturalWidth;
+                    this.style.transform = `scale(${scale})`;
+                    imageWrapper.style.height = `${this.naturalHeight * scale}px`;
+                } else {
+                    this.classList.remove('large-image');
+                    this.style.transform = 'none';
+                    imageWrapper.style.height = 'auto';
+                }
+            };
             
             directImage.onerror = function() {
                 handleFallback(url);
